--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -11,6 +11,7 @@ add_executable(${CMAKE_PROJECT_NAME}.out
     src/main.c
     src/startup_msp432p401r_gcc.c
     src/system_msp432p401r.c
+    src/uart.c
     FreeRTOS-Kernel/croutine.c
     FreeRTOS-Kernel/event_groups.c
     FreeRTOS-Kernel/list.c
